# deneb

./: .coveragerc  .dockerignore  .env_example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  bitbucket-pipelines.yml  celery_ship.py  conftest.py  docker-compose.yml  fabfile.py  perf.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  pythonapp.yml
alembic/: env.py
alembic/versions/: 30f786bc9314_add_timestamp_to_user.py  79b92270391a_add_synced_at_for_artist.py  8fde2177cffa_add_user_config_column.py  8fde2177cffa_add_user_config_per_app_table.py  c5a2efda32eb_migrate_all_tables_under_deneb_scheme.py  d00285e9d305_init_db.py
deneb/: __main__.py  artist_update.py  config.py  db.py  db_async.py  debug.txt  logger.py  main.py  migrations.json  profile.file  sp.py  sp_async.py  structs.py  tools.py  tortoise_pool.py  user_update.py  weekler.py
deneb/chatbot/: message.py
deneb/db/: __init__.py  album.py  artist.py  market.py  user.py  user_app_config.py
deneb/migrations/: 001_add_human_name_spotify.py
deneb/spotify/: common.py  users.py  users_following.py  weekly_releases.py  yearly_liked.py
deneb/workers/: artist_sync.py  user_sync.py
notebook/: yearly-spotify.ipynb
scripts/: spotify_keys_sample.sh
src/: artist_update.py  db.py  logger.py  main.py  sp.py  tools.py  user_update.py  weekler.py
tests/unit/: common.py  test_artist_update.py  test_sp.py  test_structs.py  test_user_update.py
tests/unit/fixtures/: mocks.py
tests/unit/fixtures/examples/: album.json  artist.json  playlist.json  track.json
tests/unit/workers/: test_artist_sync.py  test_user_sync.py
