[tool.poetry]
name = "deneb"
version = "2.2.7"
description = "deneb project"
authors = ["DTailor <dann.croitoru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.9.0"
logzero = "^1.5.0"
click = "^7.0"
sentry-sdk = "^0.16.4"
tortoise-orm = "^0.15.18"
asyncpg = "^0.21.0"
aiohttp = "^3.6.2"
arrow = "^0.15.5"
pytz = "^2020.1"
sqlalchemy = "^1.4.18"
python-dotenv = "^0.14.0"
uvloop = "^0.14.0"
flower = "^0.9.4"
celery = "^4.4.2"
pypika = "0.37.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
ipython = "^7.13.0"
isort = "^5.4.1"
mypy = "^0.782"
vulture = "^2.0"
fabric = "^2.5.0"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-asyncio = "^0.14.0"
aiomock = "^0.1.0"
coverage = "^5.0.3"
pylama = "^7.7.1"
black = "^19.10b0"
alembic = "^1.4.1"
psycopg2-binary = "^2.8.4"
pytest-mock = "^3.1.0"
pyinstrument = "^3.1.3"
snakeviz = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
